[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xo"
version = "0.1"
description = ''
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [
  { name = "John Conery", email = "conery@uoregon.edu" },
]
dependencies = [
  "matplotlib",
  "numpy",
  "pandas",
  "panel",
  "scipy",
  "rich",
]

[project.urls]
Documentation = "https://github.com/John Conery/crossovers#readme"
Issues = "https://github.com/John Conery/crossovers/issues"
Source = "https://github.com/John Conery/crossovers"
